--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=5.6",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "illuminate/support": "^5.2",
+        "illuminate/support": "^5.2|^6.0",
         "guzzlehttp/guzzle": "~6.0"
     },
     "autoload": {
